--- a/documents/solutions.html
+++ b/documents/solutions.html
@@ -395,25 +395,28 @@
     </div>
   </header>
   <main class="main">
-    <div class="wrapper">
-      <div class="social-fixed">
-        <div class="social-fixed__mobile">
-          <i class="fas fa-user-circle"></i>
-        </div>
-        <div class="wrapper">
-          <ul class="social-list">
-            <li class="social-list__item">
-              <a href="#"><i class="fab fa-skype"></i></a>
-            </li>
-            <li class="social-list__item">
-              <a href="#"><i class="fab fa-viber"></i></a>
-            </li>
-            <li class="social-list__item">
-              <a href="#"><i class="fab fa-telegram-plane"></i></a>
-            </li>
-          </ul>
-        </div>
+    <div class="social-fixed">
+      <div class="social-fixed__mobile">
+        <i class="fas fa-user-circle"></i>
       </div>
+      <div class="wrapper">
+        <ul class="social-list">
+          <li class="social-list__item">
+            <a href="#"><i class="fab fa-skype"></i></a>
+            <a class="add-us" href="#">Добавить нас</a>
+          </li>
+          <li class="social-list__item">
+            <a href="#"><i class="fab fa-viber"></i></a>
+            <a class="add-us" href="#">Добавить нас</a>
+          </li>
+          <li class="social-list__item">
+            <a href="#"><i class="fab fa-telegram-plane"></i></a>
+            <a class="add-us" href="#">Добавить нас</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+    <div class="wrapper">
       <div class="breadcrumbs">
         <ul class="breadcrumbs-list">
           <li class="breadcrumbs-list__item"><a href="#">Главная</a></li>
