--- a/index.html
+++ b/index.html
@@ -403,12 +403,15 @@
         <ul class="social-list">
           <li class="social-list__item">
             <a href="#"><i class="fab fa-skype"></i></a>
+            <a class="add-us" href="#">Добавить нас</a>
           </li>
           <li class="social-list__item">
             <a href="#"><i class="fab fa-viber"></i></a>
+            <a class="add-us" href="#">Добавить нас</a>
           </li>
           <li class="social-list__item">
             <a href="#"><i class="fab fa-telegram-plane"></i></a>
+            <a class="add-us" href="#">Добавить нас</a>
           </li>
         </ul>
       </div>
@@ -842,24 +845,24 @@
               </div>
             </div>
             <div class="directions-tabs__slider slider-aligner">
-              <div class="directions-content__button active" id="slider-item__1">
+              <div class="directions-content__button active" id="slider-item__5">
                 <span class="title">Программа расширения покрытия</span>
                 <span class="plus"></span>
               </div>
-              <div class="directions-content__button" id="slider-item__2">
+              <div class="directions-content__button" id="slider-item__6">
                 <span class="title">Программа расширения покрытия</span>
                 <span class="plus"></span>
               </div>
-              <div class="directions-content__button" id="slider-item__3">
+              <div class="directions-content__button" id="slider-item__7">
                 <span class="title">Программа расширения покрытия</span>
                 <span class="plus"></span>
               </div>
-              <div class="directions-content__button" id="slider-item__3">
+              <div class="directions-content__button" id="slider-item__8">
                 <span class="title">Программа расширения покрытия</span>
                 <span class="plus"></span>
               </div>
             </div>
-            <div class="tabs-card" data-target="slider-item__1">
+            <div class="tabs-card active" data-target="slider-item__5">
               <div class="tabs-card__img" style="background-image: url('img/tabs-card__img.png');"></div>
               <div class="tabs-card__block">
                 <div class="tabs-card__text">
@@ -871,7 +874,7 @@
                 <a href="#" class="link">Перейти к выбору оборудования <i class="fas fa-long-arrow-alt-right"></i></a>
               </div>
             </div>
-            <div class="tabs-card" data-target="slider-item__2">
+            <div class="tabs-card" data-target="slider-item__6">
               <div class="tabs-card__img" style="background-image: url('img/tabs-card__img.png');"></div>
               <div class="tabs-card__block">
                 <div class="tabs-card__text">
