--- a/documents/news.html
+++ b/documents/news.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width" initial-scale="1.0">
@@ -47,7 +47,7 @@
         </div>
         <div class="header-content__block header-content__right">
           <div class="header-content__contacts">
-            <p class="call-back"><span class="tablet-hide js-call__back"><strong>+38 (044) 448-16-18</span></strong><i class="fas fa-phone js-call__tablet"></i></p>
+            <p class="call-back"><span class="tablet-hide js-call__back"><strong>+38 (044) 448-16-18</strong></span><i class="fas fa-phone js-call__tablet"></i></p>
             <p class="modal-write"><span class="tablet-hide js-modal__questions">info@dtcgroup.com.ua</span><i class="fas fa-envelope js-dropdown__email"></i></p>
             <form action="" class="call-back__form italic-input">
               <input type="text" placeholder="Ваш номер">
@@ -1153,6 +1153,38 @@
           </label>
           <p class="warranty">Мы гарантируем конфиденциальность введенной вами информации</p>
           <button class="standart-btn">Отправить</button>
+        </div>
+      </form>
+    </div>
+    <div class="modal modal-ask__price">
+      <form action="" class="modal-form">
+        <div class="modal-form__title">
+          <span class="title">Хотите узнать цену на товар?</span>
+          <span class="close"><i class="fas fa-times"></i></span>
+        </div>
+        <div class="current-modification">
+          <span class="current-modification__text">Коннектор ST/PC multimode 3,0 мм</span>
+        </div>
+        <div class="modal-form__content">
+          <label for="modal-name-ask" class="modal-form__label italic-input">
+            <i class="fas fa-user-alt"></i>
+            <input type="text" name="name" id="modal-name-ask" placeholder="Ваше Имя">
+          </label>
+          <label for="modal-phone-ask" class="modal-form__label italic-input">
+            <i class="fas fa-mobile-alt"></i>
+            <input type="text" id="modal-phone-ask" name="phone" placeholder="Ваш телефон">
+          </label>
+          <label for="modal-email-ask" class="modal-form__label italic-input error">
+            <i class="far fa-envelope"></i>
+            <input type="email" name="email" id="modal-email-ask" placeholder="Ваш email">
+            <p class="error__text">поле заполнено неверно</p>
+          </label>
+          <label for="modal-text-ask" class="modal-form__label italic-input">
+            <i class="far fa-comment-alt"></i>
+            <textarea name="text" id="modal-text-ask" placeholder="Текст сообщения"></textarea>
+          </label>
+          <p class="warranty">Мы гарантируем конфиденциальность введенной вами информации</p>
+          <button class="standart-btn">Узнать цену</button>
         </div>
       </form>
     </div>
