--- a/documents/product.html
+++ b/documents/product.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width" initial-scale="1.0">
@@ -47,7 +47,7 @@
         </div>
         <div class="header-content__block header-content__right">
           <div class="header-content__contacts">
-            <p class="call-back"><span class="tablet-hide js-call__back"><strong>+38 (044) 448-16-18</span></strong><i class="fas fa-phone js-call__tablet"></i></p>
+            <p class="call-back"><span class="tablet-hide js-call__back"><strong>+38 (044) 448-16-18</strong></span><i class="fas fa-phone js-call__tablet"></i></p>
             <p class="modal-write"><span class="tablet-hide js-modal__questions">info@dtcgroup.com.ua</span><i class="fas fa-envelope js-dropdown__email"></i></p>
             <form action="" class="call-back__form italic-input">
               <input type="text" placeholder="Ваш номер">
@@ -1760,22 +1760,22 @@
           <span class="current-modification__text">Коннектор ST/PC multimode 3,0 мм</span>
         </div>
         <div class="modal-form__content">
-          <label for="modal-name" class="modal-form__label italic-input">
+          <label for="modal-name-ask" class="modal-form__label italic-input">
             <i class="fas fa-user-alt"></i>
-            <input type="text" name="name" id="modal-name" placeholder="Ваше Имя">
+            <input type="text" name="name" id="modal-name-ask" placeholder="Ваше Имя">
           </label>
-          <label for="modal-phone" class="modal-form__label italic-input">
+          <label for="modal-phone-ask" class="modal-form__label italic-input">
             <i class="fas fa-mobile-alt"></i>
-            <input type="text" id="modal-phone" name="phone" placeholder="Ваш телефон">
+            <input type="text" id="modal-phone-ask" name="phone" placeholder="Ваш телефон">
           </label>
-          <label for="modal-email" class="modal-form__label italic-input error">
+          <label for="modal-email-ask" class="modal-form__label italic-input error">
             <i class="far fa-envelope"></i>
-            <input type="email" name="email" id="modal-email" placeholder="Ваш email">
+            <input type="email" name="email" id="modal-email-ask" placeholder="Ваш email">
             <p class="error__text">поле заполнено неверно</p>
           </label>
-          <label for="modal-text" class="modal-form__label italic-input">
+          <label for="modal-text-ask" class="modal-form__label italic-input">
             <i class="far fa-comment-alt"></i>
-            <textarea name="text" id="modal-text" placeholder="Текст сообщения"></textarea>
+            <textarea name="text" id="modal-text-ask" placeholder="Текст сообщения"></textarea>
           </label>
           <p class="warranty">Мы гарантируем конфиденциальность введенной вами информации</p>
           <button class="standart-btn">Узнать цену</button>
