--- a/documents/404.html
+++ b/documents/404.html
@@ -7,9 +7,8 @@
     <link rel="icon" href="../img/favico.png" type="image/png">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/slick.css">
-    <link rel="stylesheet" href="../css/price-sliderJQ.css">
 </head>
-<body class="pagename-cart">
+<body>
   <header class="header">
     <div class="header-content">
      <div class="header-content__shadow">
@@ -415,325 +414,15 @@
         </ul>
       </div>
     </div>
-    <div class="wrapper">
-      <div class="breadcrumbs">
-        <ul class="breadcrumbs-list">
-          <li class="breadcrumbs-list__item"><a href="#">Главная</a></li>
-          <li class="breadcrumbs-list__item">Корзина</li>
-        </ul>
-      </div>
-      <div class="section-title section-title--left section-title--border">
-        <h1 class="title">Корзина</h1>
-      </div>
-    </div>
-    <div class="wrapper">
-      <div class="cart-block">
-        <div class="cart-buttons">
-          <ul class="cart-buttons__list">
-            <li class="cart-buttons__item"><span class="text">1 Корзина <i class="icon-check"></i></span></li>
-            <li class="cart-buttons__item"><span class="text">2 Оформление заказа</span></li>
-          </ul>
+    <div class="not-found">
+      <div class="not-found__content">
+        <p class="title">Ой!</p>
+        <div class="not-found__middle" style="background-image: url(../img/opps-img.png);">
         </div>
-        <div class="cart-title">
-          <span class="cart-title__text block-first">Товары</span>
-          <span class="cart-title__text cart-scnd">Цена, грн</span>
-          <span class="cart-title__text cart-thrd">Количество</span>
-          <span class="cart-title__text cart-fourth">Всего, грн</span>
-        </div>
-        <div class="cart-block__content">
-          <div class="cart-card" data-id="1" data-price='52300' data-total__sale='0' sale-type='' sale-rate="400" data-total__price='52300' data-amount='2'>
-            <div class="mobile-title__content">
-              <a href="#" class="link">Оптический аттеньюатор разъемного типа Male-Female</a>
-              <p class="text">ST/PC-SM-BK-09-XX ST/PC multimode 3,0 ммST/PC-SM-BK-09-XX ST/PC multimode 3,0 мм</p>
-            </div>
-            <div class="cart-card__info block-first">
-              <div class="img-block">
-                <img src="../img/card-test2.png" alt="">
-              </div>
-              <div class="text-block">
-                <a href="#" class="link">Оптический аттеньюатор разъемного типа Male-Female</a>
-                <p class="text">ST/PC-SM-BK-09-XX ST/PC multimode 3,0 ммST/PC-SM-BK-09-XX ST/PC multimode 3,0 мм</p>
-                <p class="text-block__brand">Edimax</p>
-                <p class="text-block__article">Артикул: <span class="article-num">1275004</span></p>
-              </div>
-            </div>
-            <div class="cart-card__price cart-scnd">
-              <p class="price">52 300</p>
-            </div>
-            <div class="cart-card__calc cart-thrd">
-              <div class="calc-block">
-                <div class="mobile-list">
-                  <p class="mobile-list__plus"><i class="icon-plus"></i></p>
-                  <ul>
-                    <li>1</li>
-                    <li>2</li>
-                    <li>3</li>
-                    <li>4</li>
-                    <li>5</li>
-                    <li>6</li>
-                    <li>7</li>
-                    <li>8</li>
-                    <li>9</li>
-                    <li>10</li>
-                    <li>11</li>
-                    <li>12</li>
-                    <li>13</li>
-                    <li>14</li>
-                    <li>15</li>
-                    <li>16</li>
-                    <li>17</li>
-                  </ul>
-                </div>
-                <span class="button minus">
-                  <i class="icon-minus"></i>
-                </span>
-                <input type="text" class="num" value="1">
-                <span class="button plus">
-                  <i class="icon-plus"></i>
-                </span>
-              </div>
-              <div class="cart-card__amount">
-                <div class="amount-block">
-                  <span class="sale"><span class="text">-400 грн</span>
-                  <span class="from">от <span class="num">2</span>шт</span>
-                  </span>
-                </div>
-              </div>
-            </div>
-            <div class="cart-card__total cart-fourth">
-              <span class="cart-total__price">52 300</span>
-              <span class="remove-cart"><i class="icon-trash"></i></span>
-            </div>
-          </div>
-          <div class="cart-card kit" data-id="2" data-price='10400' data-total__sale='0' sale-type='percent' sale-rate="20" data-total__price='10400' data-amount='30'>
-            <p class="kit__title"><span class="text">Комплект</span></p>
-            <div class="kit-block">
-              <div class="kit__content">
-                <div class="mobile-title__content">
-                  <a href="#" class="link">Оптический аттеньюатор разъемного типа Male-Female</a>
-                  <p class="text">ST/PC-SM-BK-09-XX ST/PC multimode 3,0 ммST/PC-SM-BK-09-XX ST/PC multimode 3,0 мм</p>
-                </div>
-                <div class="cart-card__info block-first">
-                  <div class="img-block">
-                    <img src="../img/card-test2.png" alt="">
-                  </div>
-                  <div class="text-block">
-                    <a href="#" class="link">Оптический аттеньюатор разъемного типа Male-Female</a>
-                    <p class="text">ST/PC-SM-BK-09-XX ST/PC multimode 3,0 ммST/PC-SM-BK-09-XX ST/PC multimode 3,0 мм</p>
-                    <p class="text-block__brand">Edimax</p>
-                    <p class="text-block__article">Артикул: <span class="article-num">1275004</span></p>
-                  </div>
-                </div>
-                <div class="cart-card__price cart-scnd">
-                  <p class="price">52 300</p>
-                </div>
-              </div>
-              <div class="kit__content">
-                <div class="mobile-title__content">
-                  <a href="#" class="link">Оптический аттеньюатор разъемного типа Male-Female</a>
-                  <p class="text">ST/PC-SM-BK-09-XX ST/PC multimode 3,0 ммST/PC-SM-BK-09-XX ST/PC multimode 3,0 мм</p>
-                </div>
-                <div class="cart-card__info block-first">
-                  <div class="img-block">
-                    <img src="../img/card-test2.png" alt="">
-                  </div>
-                  <div class="text-block">
-                    <a href="#" class="link">Оптический аттеньюатор разъемного типа Male-Female</a>
-                    <p class="text">ST/PC-SM-BK-09-XX ST/PC multimode 3,0 ммST/PC-SM-BK-09-XX ST/PC multimode 3,0 мм</p>
-                    <p class="text-block__brand">Edimax</p>
-                    <p class="text-block__article">Артикул: <span class="article-num">1275004</span></p>
-                  </div>
-                </div>
-                <div class="cart-card__price cart-scnd">
-                  <p class="price">52 300</p>
-                </div>
-              </div>
-              <div class="kit__content">
-                <div class="mobile-title__content">
-                  <a href="#" class="link">Оптический аттеньюатор разъемного типа Male-Female</a>
-                  <p class="text">ST/PC-SM-BK-09-XX ST/PC multimode 3,0 ммST/PC-SM-BK-09-XX ST/PC multimode 3,0 мм</p>
-                </div>
-                <div class="cart-card__info block-first">
-                  <div class="img-block">
-                    <img src="../img/card-test2.png" alt="">
-                  </div>
-                  <div class="text-block">
-                    <a href="#" class="link">Оптический аттеньюатор разъемного типа Male-Female</a>
-                    <p class="text">ST/PC-SM-BK-09-XX ST/PC multimode 3,0 ммST/PC-SM-BK-09-XX ST/PC multimode 3,0 мм</p>
-                    <p class="text-block__brand">Edimax</p>
-                    <p class="text-block__article">Артикул: <span class="article-num">1275004</span></p>
-                  </div>
-                </div>
-                <div class="cart-card__price cart-scnd">
-                  <p class="price">52 300</p>
-                  <div class="cart-card__amount">
-                    <div class="amount-block">
-                      <span class="sale"><span class="text">-20%</span>
-                        <span class="from">от <span class="num">30</span>шт</span>
-                      </span>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="cart-card__calc cart-thrd">
-              <span class="remove-cart"><i class="icon-trash"></i></span>
-              <div class="calc-block">
-                <div class="mobile-list">
-                  <p class="mobile-list__plus"><i class="icon-plus"></i></p>
-                  <ul>
-                    <li>1</li>
-                    <li>2</li>
-                    <li>3</li>
-                    <li>4</li>
-                    <li>5</li>
-                    <li>6</li>
-                    <li>7</li>
-                    <li>8</li>
-                    <li>9</li>
-                    <li>10</li>
-                    <li>11</li>
-                    <li>12</li>
-                    <li>13</li>
-                    <li>14</li>
-                    <li>15</li>
-                    <li>16</li>
-                    <li>17</li>
-                  </ul>
-                </div>
-                <span class="button minus">
-                  <i class="icon-minus"></i>
-                </span>
-                <input type="text" class="num" value="1">
-                <span class="button plus">
-                  <i class="icon-plus"></i>
-                </span>
-              </div>
-            </div>
-            <div class="cart-card__total cart-fourth">
-              <span class="kit__total"><b>Стоимость:</b> <span class="cart-total__price">52 300</span> грн.</span>
-            </div>
-          </div>
-        </div>
-        <div class="cart-block__order">
-          <form action="#" class="order-info" id="order-info">
-            <div class="personal-status">
-              <p class="title">Юридический статус</p>
-              <input class="personal-status__input" type="hidden">
-              <div class="personal-status__block checked">
-                <p class="text">
-                  <span class="js-text">Физическое лицо</span>
-                </p>
-              </div>
-              <div class="personal-status__block">
-                <p class="text">
-                  <span class="js-text">Юридическое лицо без НДС</span>
-                </p>
-              </div>
-              <div class="personal-status__block">
-                <p class="text">
-                  <span class="js-text">Юридическое лицо с НДС</span>
-                </p>
-              </div>
-            </div>
-            <div class="order-info__block order-info__personal">
-              <p class="title">Персональные данные</p>
-              <label class="form-label italic-input error">
-                <p class="form-title">имя*</p>
-                <input type="text" required="" placeholder="Введите имя">
-                <p class="form-error">поле заполнено неверно</p>
-              </label>
-              <label class="form-label italic-input ">
-                <p class="form-title">имя*</p>
-                <input type="text" required="" placeholder="Введите имя">
-                <p class="form-error">поле заполнено неверно</p>
-              </label>
-              <label class="form-label italic-input ">
-                <p class="form-title">имя*</p>
-                <input type="text" required="" placeholder="Введите имя">
-                <p class="form-error">поле заполнено неверно</p>
-              </label>
-              <label class="form-label italic-input ">
-                <p class="form-title">имя*</p>
-                <input type="text" required="" placeholder="Введите имя">
-                <p class="form-error">поле заполнено неверно</p>
-              </label>
-              <label class="form-label italic-input ">
-                <p class="form-title">имя*</p>
-                <input type="text" required="" placeholder="Введите имя">
-                <p class="form-error">поле заполнено неверно</p>
-              </label>
-            </div>
-            <div class="order-info__block order-info__shipping">
-              <p class="title">Доставка и оплата</p>
-              <label class="form-label">
-                <p class="form-title">имя*</p>
-                <div class="wrap-drop" id="sort-first">
-                  <input class="wrap-drop__input" type="hidden">
-                  <div class="selected-el"><span></span></div>
-                  <ul class="drop">
-                      <li class="selected"><a>Общий вопрос2</a></li>
-                      <li><a>Финансовый вопрос</a></li>
-                      <li><a>Технический вопрос</a></li>
-                      <li><a>Жалоба</a></li>
-                      <li><a>Финансовый вопрос</a></li>
-                      <li><a>Технический вопрос</a></li>
-                      <li><a>Жалоба</a></li>
-                      <li><a>Финансовый вопрос</a></li>
-                      <li><a>Технический вопрос</a></li>
-                      <li><a>Жалоба</a></li>
-                  </ul>
-                </div>
-              </label>
-              <label class="form-label italic-input ">
-                <p class="form-title">имя*</p>
-                <input type="text" required="" placeholder="Введите имя">
-                <p class="form-error">поле заполнено неверно</p>
-              </label>
-              <label class="form-label italic-input ">
-                <p class="form-title">имя*</p>
-                <input type="text" required="" placeholder="Введите имя">
-                <p class="form-error">поле заполнено неверно</p>
-              </label>
-              <label class="form-label">
-                <p class="form-title">имя*</p>
-                <div class="wrap-drop" id="sort-scnd">
-                  <input class="wrap-drop__input" type="hidden">
-                  <div class="selected-el"><span></span></div>
-                  <ul class="drop">
-                      <li class="selected"><a>Общий вопрос1</a></li>
-                      <li><a>Финансовый вопрос</a></li>
-                      <li><a>Технический вопрос</a></li>
-                      <li><a>Жалоба</a></li>
-                  </ul>
-                </div>
-              </label>
-            </div>
-          </form>
-        </div>
-        <div class="cart-block__total">
-          <span class="back"><i class="icon-arrow4"></i> Назад к корзине</span>
-          <div class="price-table">
-            <p class="title">Ваш заказ:</p>
-            <ul class="price-table__list">
-              <li class="price-table__item quantity">
-                <span class="text">Товаров:</span>
-                <span class="num">30</span>
-              </li>
-              <li class="price-table__item discount">
-                <span class="text">Ваша cкидка:</span>
-                <span class="num">569 000 грн</span>
-              </li>
-              <li class="price-table__item total">
-                <span class="text">Итого:</span>
-                <span class="num"><span class="num-js">1 569 000</span> грн</span>
-              </li>
-            </ul>
-            <div class="price-table__buttons">
-              <p class="button order">оформить заказ</p>
-              <span class="button link">Подтвердить заказ</span>
-            </div>
-          </div>
+        <span class="text">Такой страницы не существует, попробуйте ввести <br>другой адрес ссылки или вернитесь:</span>
+        <div>
+          <a class="standart-btn" href="">На главную</a>
+          <a class="standart-btn" href="">на предидущую страницу</a>
         </div>
       </div>
     </div>
@@ -858,7 +547,6 @@
   </footer>
   <script src="../js/jquery-3.2.1.min.js"></script>
   <script src="../js/slick.min.js"></script>
-  <script src="../js/jquery-ui.min.js"></script>
   <script src="../js/script.js"></script>
   <script src="../js/ie9-placeholder.js"></script>
 </body>
