--- a/documents/news-page.html
+++ b/documents/news-page.html
@@ -7,7 +7,6 @@
     <link rel="icon" href="../img/favico.png" type="image/png">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/slick.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.2/css/all.css" integrity="sha384-/rXc/GQVaYpyDdyxK+ecHPVYJSN9bmVFBvjA/9eOB+pb3F2w2N6fc5qB9Ew5yIns" crossorigin="anonymous">
 </head>
 <body class="pagename-news__page">
   <header class="header">
@@ -23,14 +22,14 @@
             <span class="title">Каталог <span class="large">продукции</span></span>
           </div>
           <div class="form-holder">
-            <span class="form-holder__btn"><span class="mobile-hide">Поиск</span> <i class="fas fa-search"></i></span>
+            <span class="form-holder__btn"><span class="mobile-hide">Поиск</span> <i class="icon-Object2"></i></span>
             <form action="" class="header-content__form">
               <input name="header-search" type="text" placeholder="Что искать?">
               <button></button>
             </form>
           </div>
           <div class="info-dropdown">
-            <i class="fas fa-info-circle tablet-button"></i>
+            <i class="icon-info tablet-button"></i>
             <p class="title">Клиентам</p>
             <div class="info-list__holder">
               <ul class="info-dropdown__list">
@@ -47,8 +46,8 @@
         </div>
         <div class="header-content__block header-content__right">
           <div class="header-content__contacts">
-            <p class="call-back"><span class="tablet-hide js-call__back"><strong>+38 (044) 448-16-18</strong></span><i class="fas fa-phone js-call__tablet"></i></p>
-            <p class="modal-write"><span class="tablet-hide js-modal__questions">info@dtcgroup.com.ua</span><i class="fas fa-envelope js-dropdown__email"></i></p>
+            <p class="call-back"><span class="tablet-hide js-call__back"><strong>+38 (044) 448-16-18</strong></span><i class="icon-phone js-call__tablet"></i></p>
+            <p class="modal-write"><span class="tablet-hide js-modal__questions">info@dtcgroup.com.ua</span><i class="icon-email js-dropdown__email"></i></p>
             <form action="" class="call-back__form italic-input">
               <input type="text" placeholder="Ваш номер">
               <input type="text" placeholder="Ваше имя">
@@ -71,7 +70,7 @@
               </div>
               <div class="cart-price__quantity">
                 <span class="product-num">100</span>
-                <i class="fas fa-shopping-cart"></i>
+                <i class="icon-Object"></i>
               </div>
             </div>
           </a>
@@ -128,7 +127,7 @@
                       <div class="product-card hot" data-id="1" data-price='1' data-modifier='1'>
                         <div class="product-card__top">
                           <div class="product-card__download">
-                            <i class="fas fa-file-download"></i>
+                            <i class="icon-download"></i>
                           </div>
                           <div class="product-card__event">
                             <span class="title">Акция</span>
@@ -193,7 +192,7 @@
                       <div class="product-card hot" data-id="2" data-price='1' data-modifier='0'>
                         <div class="product-card__top">
                           <div class="product-card__download">
-                            <i class="fas fa-file-download"></i>
+                            <i class="icon-download"></i>
                           </div>
                           <div class="product-card__event">
                             <span class="title">Акция</span>
@@ -258,7 +257,7 @@
                       <div class="product-card" data-id="3" data-price='0' data-modifier='0'>
                         <div class="product-card__top">
                           <div class="product-card__download">
-                            <i class="fas fa-file-download"></i>
+                            <i class="icon-download"></i>
                           </div>
                           <div class="product-card__event">
                             <span class="title">Акция</span>
@@ -323,7 +322,7 @@
                       <div class="product-card hot" data-id="4" data-price='0' data-modifier='1'>
                         <div class="product-card__top">
                           <div class="product-card__download">
-                            <i class="fas fa-file-download"></i>
+                            <i class="icon-download"></i>
                           </div>
                           <div class="product-card__event">
                             <span class="title">Акция</span>
@@ -396,20 +395,20 @@
   <main class="main">
     <div class="social-fixed">
       <div class="social-fixed__mobile">
-        <i class="fas fa-user-circle"></i>
+        <i class="icon-mobile-social"></i>
       </div>
       <div class="wrapper">
         <ul class="social-list">
           <li class="social-list__item">
-            <a href="#"><i class="fab fa-skype"></i></a>
+            <a href="#"><i class="icon-skype-brands"></i></a>
             <a class="add-us" href="#">Добавить нас</a>
           </li>
           <li class="social-list__item">
-            <a href="#"><i class="fab fa-viber"></i></a>
+            <a href="#"><i class="icon-viber-brands"></i></a>
             <a class="add-us" href="#">Добавить нас</a>
           </li>
           <li class="social-list__item">
-            <a href="#"><i class="fab fa-telegram-plane"></i></a>
+            <a href="#"><i class="icon-telegram-plane-brands"></i></a>
             <a class="add-us" href="#">Добавить нас</a>
           </li>
         </ul>
@@ -497,19 +496,19 @@
       <div class="footer-aligner">
         <p class="title">Контакты</p>
         <div class="footer-phone">
-          <a class="link" href="tel:+38 (044) 448-16-18"><i class="fas fa-phone"></i>+38 (044) 448-16-18</a>
-          <a class="link" href="tel:+38 (044) 555-55-55"><i class="fas fa-fax"></i>+38 (044) 555-55-55</a>
+          <a class="link" href="tel:+38 (044) 448-16-18"><i class="icon-phone"></i><span>+38 (044) 448-16-18</span></a>
+          <a class="link" href="tel:+38 (044) 555-55-55"><i class="icon-fax"></i><span>+38 (044) 555-55-55</span></a>
         </div>
         <div class="footer-social">
           <ul class="social-list">
             <li class="social-list__item">
-              <a href="#"><i class="fab fa-skype"></i></a>
+              <a href="#"><i class="icon-skype-brands"></i></a>
             </li>
             <li class="social-list__item">
-              <a href="#"><i class="fab fa-viber"></i></a>
+              <a href="#"><i class="icon-viber-brands"></i></a>
             </li>
             <li class="social-list__item">
-              <a href="#" class="link"><i class="fab fa-telegram-plane"></i></a>
+              <a href="#" class="link"><i class="icon-telegram-plane-brands"></i></a>
             </li>
           </ul>
           <div class="button"><span class="text">Подписаться на новости</span>
@@ -552,24 +551,24 @@
       <form action="" class="modal-form">
         <div class="modal-form__title">
           <span class="title">Задайте свой вопрос</span>
-          <span class="close"><i class="fas fa-times"></i></span>
+          <span class="close"><i class="icon-close"></i></span>
         </div>
         <div class="modal-form__content">
           <label for="modal-name" class="modal-form__label italic-input">
-            <i class="fas fa-user-alt"></i>
+            <i class="icon-account"></i>
             <input type="text" name="name" id="modal-name" placeholder="Ваше Имя">
           </label>
           <label for="modal-phone" class="modal-form__label italic-input">
-            <i class="fas fa-mobile-alt"></i>
+            <i class="icon-phone1"></i>
             <input type="text" id="modal-phone" name="phone" placeholder="Ваш телефон">
           </label>
           <label for="modal-email" class="modal-form__label italic-input error">
-            <i class="far fa-envelope"></i>
+            <i class="icon-email1"></i>
             <input type="email" name="email" id="modal-email" placeholder="Ваш email">
             <p class="error__text">поле заполнено неверно</p>
           </label>
           <label for="modal-text" class="modal-form__label italic-input">
-            <i class="far fa-comment-alt"></i>
+            <i class="icon-message"></i>
             <textarea name="text" id="modal-text" placeholder="Текст сообщения"></textarea>
           </label>
           <p class="warranty">Мы гарантируем конфиденциальность введенной вами информации</p>
@@ -581,27 +580,27 @@
       <form action="" class="modal-form">
         <div class="modal-form__title">
           <span class="title">Хотите узнать цену на товар?</span>
-          <span class="close"><i class="fas fa-times"></i></span>
+          <span class="close"><i class="icon-close"></i></span>
         </div>
         <div class="current-modification">
           <span class="current-modification__text">Коннектор ST/PC multimode 3,0 мм</span>
         </div>
         <div class="modal-form__content">
           <label for="modal-name-ask" class="modal-form__label italic-input">
-            <i class="fas fa-user-alt"></i>
+            <i class="icon-account"></i>
             <input type="text" name="name" id="modal-name-ask" placeholder="Ваше Имя">
           </label>
           <label for="modal-phone-ask" class="modal-form__label italic-input">
-            <i class="fas fa-mobile-alt"></i>
+            <i class="icon-phone1"></i>
             <input type="text" id="modal-phone-ask" name="phone" placeholder="Ваш телефон">
           </label>
           <label for="modal-email-ask" class="modal-form__label italic-input error">
-            <i class="far fa-envelope"></i>
+            <i class="icon-email1"></i>
             <input type="email" name="email" id="modal-email-ask" placeholder="Ваш email">
             <p class="error__text">поле заполнено неверно</p>
           </label>
           <label for="modal-text-ask" class="modal-form__label italic-input">
-            <i class="far fa-comment-alt"></i>
+            <i class="icon-message"></i>
             <textarea name="text" id="modal-text-ask" placeholder="Текст сообщения"></textarea>
           </label>
           <p class="warranty">Мы гарантируем конфиденциальность введенной вами информации</p>
@@ -611,7 +610,7 @@
     </div>
   </footer>
   <script src="../js/jquery-3.2.1.min.js"></script>
-  <script src="../js/slick.js"></script>
+  <script src="../js/slick.min.js"></script>
   <script src="../js/script.js"></script>
   <script src="../js/ie9-placeholder.js"></script>
 </body>
