--- a/documents/product.html
+++ b/documents/product.html
@@ -7,7 +7,6 @@
     <link rel="icon" href="../img/favico.png" type="image/png">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/slick.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.2/css/all.css" integrity="sha384-/rXc/GQVaYpyDdyxK+ecHPVYJSN9bmVFBvjA/9eOB+pb3F2w2N6fc5qB9Ew5yIns" crossorigin="anonymous">
 </head>
 <body class="pagename-product">
   <header class="header">
@@ -23,14 +22,14 @@
             <span class="title">Каталог <span class="large">продукции</span></span>
           </div>
           <div class="form-holder">
-            <span class="form-holder__btn"><span class="mobile-hide">Поиск</span> <i class="fas fa-search"></i></span>
+            <span class="form-holder__btn"><span class="mobile-hide">Поиск</span> <i class="icon-Object2"></i></span>
             <form action="" class="header-content__form">
               <input name="header-search" type="text" placeholder="Что искать?">
               <button></button>
             </form>
           </div>
           <div class="info-dropdown">
-            <i class="fas fa-info-circle tablet-button"></i>
+            <i class="icon-info tablet-button"></i>
             <p class="title">Клиентам</p>
             <div class="info-list__holder">
               <ul class="info-dropdown__list">
@@ -47,8 +46,8 @@
         </div>
         <div class="header-content__block header-content__right">
           <div class="header-content__contacts">
-            <p class="call-back"><span class="tablet-hide js-call__back"><strong>+38 (044) 448-16-18</strong></span><i class="fas fa-phone js-call__tablet"></i></p>
-            <p class="modal-write"><span class="tablet-hide js-modal__questions">info@dtcgroup.com.ua</span><i class="fas fa-envelope js-dropdown__email"></i></p>
+            <p class="call-back"><span class="tablet-hide js-call__back"><strong>+38 (044) 448-16-18</strong></span><i class="icon-phone js-call__tablet"></i></p>
+            <p class="modal-write"><span class="tablet-hide js-modal__questions">info@dtcgroup.com.ua</span><i class="icon-email js-dropdown__email"></i></p>
             <form action="" class="call-back__form italic-input">
               <input type="text" placeholder="Ваш номер">
               <input type="text" placeholder="Ваше имя">
@@ -71,7 +70,7 @@
               </div>
               <div class="cart-price__quantity">
                 <span class="product-num">100</span>
-                <i class="fas fa-shopping-cart"></i>
+                <i class="icon-Object"></i>
               </div>
             </div>
           </a>
@@ -128,7 +127,7 @@
                       <div class="product-card hot" data-id="1" data-price='1' data-modifier='1'>
                         <div class="product-card__top">
                           <div class="product-card__download">
-                            <i class="fas fa-file-download"></i>
+                            <i class="icon-download"></i>
                           </div>
                           <div class="product-card__event">
                             <span class="title">Акция</span>
@@ -193,7 +192,7 @@
                       <div class="product-card hot" data-id="2" data-price='1' data-modifier='0'>
                         <div class="product-card__top">
                           <div class="product-card__download">
-                            <i class="fas fa-file-download"></i>
+                            <i class="icon-download"></i>
                           </div>
                           <div class="product-card__event">
                             <span class="title">Акция</span>
@@ -258,7 +257,7 @@
                       <div class="product-card" data-id="3" data-price='0' data-modifier='0'>
                         <div class="product-card__top">
                           <div class="product-card__download">
-                            <i class="fas fa-file-download"></i>
+                            <i class="icon-download"></i>
                           </div>
                           <div class="product-card__event">
                             <span class="title">Акция</span>
@@ -323,7 +322,7 @@
                       <div class="product-card hot" data-id="4" data-price='0' data-modifier='1'>
                         <div class="product-card__top">
                           <div class="product-card__download">
-                            <i class="fas fa-file-download"></i>
+                            <i class="icon-download"></i>
                           </div>
                           <div class="product-card__event">
                             <span class="title">Акция</span>
@@ -396,20 +395,20 @@
   <main class="main">
     <div class="social-fixed">
       <div class="social-fixed__mobile">
-        <i class="fas fa-user-circle"></i>
+        <i class="icon-mobile-social"></i>
       </div>
       <div class="wrapper">
         <ul class="social-list">
           <li class="social-list__item">
-            <a href="#"><i class="fab fa-skype"></i></a>
+            <a href="#"><i class="icon-skype-brands"></i></a>
             <a class="add-us" href="#">Добавить нас</a>
           </li>
           <li class="social-list__item">
-            <a href="#"><i class="fab fa-viber"></i></a>
+            <a href="#"><i class="icon-viber-brands"></i></a>
             <a class="add-us" href="#">Добавить нас</a>
           </li>
           <li class="social-list__item">
-            <a href="#"><i class="fab fa-telegram-plane"></i></a>
+            <a href="#"><i class="icon-telegram-plane-brands"></i></a>
             <a class="add-us" href="#">Добавить нас</a>
           </li>
         </ul>
@@ -476,7 +475,7 @@
                   <div class="selected-el"><span></span></div>
                   <ul class="drop">
                       <li class="selected" data-model='{"sale": "1", "modificationId":"1", "currentPrice": "505120", "oldPrice": "40000", "article":"#12asd0o", "type":"1" , "href": "https://www.youtube.com/", "percent": "20", "num":"20","date":"10.10", "isPriceHiden":"1" ,"features": {"text1":"1, дБ" , "text2": "15, дБ"} }'><a href="#1">Общий вопрос1</a></li>
-                      <li class="hot"  data-model='{"sale": "1", "modificationId":"2", "currentPrice": "50150", "oldPrice": "30000", "article":"#12ad145", "type":"2" , "href": "https://www.google.ru/", "percent": "10", "num":"30","date":"11.11", "isPriceHiden":"0" ,"features": {"text1":"15.15, дБ" , "text2": "1145, дБ"} }'><a href="#2">Финансовый вопрос</a></li>
+                      <li class="hot"  data-model='{"sale": "1", "modificationId":"2", "currentPrice": "50150", "oldPrice": "30000", "article":"#12ad145", "type":"2" , "href": "https://www.google.ru/", "percent": "10", "num":"30","date":"11.11", "isPriceHiden":"0" ,"features": null }'><a href="#2">Финансовый вопрос</a></li>
                       <li class="hot" data-model='{"sale": "1", "modificationId":"3", "currentPrice": "5055", "oldPrice": "10000", "article":"#12sdad1", "type":"1" , "href": "https://www.youtube.com/", "percent": "25", "num":"40","date":"12.12", "isPriceHiden":"1","features": {"text1":"1511, дБ" , "text2": "15225, дБ"} }'><a href="#3">Технический вопрос</a></li>
                       <li  data-model='{"sale": "0", "modificationId":"4", "currentPrice": "500", "oldPrice": "20000", "article":"#12123", "type":"2" , "href": "https://www.google.ru/", "percent": "21", "num":"20","date":"1.1", "isPriceHiden":"0", "features": {"text1":"150.15, дБ" , "text2": "155, дБ"} }'><a href="#4">Жалоба</a></li>
                   </ul>
@@ -484,7 +483,7 @@
               </div>
             <div class="download-block">
               <div class="product-card__download">
-                <i class="fas fa-file-download"></i>
+                <i class="icon-download"></i>
               </div>
               <div class="product-card__files">
                 <ul class="files-list">
@@ -608,7 +607,7 @@
           <div class="product-card hot" data-id="1" data-price='1' data-modifier='1'>
             <div class="product-card__top">
               <div class="product-card__download">
-                <i class="fas fa-file-download"></i>
+                <i class="icon-download"></i>
               </div>
               <div class="product-card__event">
                 <span class="title">Акция</span>
@@ -673,7 +672,7 @@
           <div class="product-card hot" data-id="2" data-price='1' data-modifier='0'>
             <div class="product-card__top">
               <div class="product-card__download">
-                <i class="fas fa-file-download"></i>
+                <i class="icon-download"></i>
               </div>
               <div class="product-card__event">
                 <span class="title">Акция</span>
@@ -738,7 +737,7 @@
           <div class="product-card" data-id="3" data-price='0' data-modifier='0'>
             <div class="product-card__top">
               <div class="product-card__download">
-                <i class="fas fa-file-download"></i>
+                <i class="icon-download"></i>
               </div>
               <div class="product-card__event">
                 <span class="title">Акция</span>
@@ -803,7 +802,7 @@
           <div class="product-card hot" data-id="4" data-price='0' data-modifier='1'>
             <div class="product-card__top">
               <div class="product-card__download">
-                <i class="fas fa-file-download"></i>
+                <i class="icon-download"></i>
               </div>
               <div class="product-card__event">
                 <span class="title">Акция</span>
@@ -868,7 +867,7 @@
           <div class="product-card hot" data-id="1" data-price='1' data-modifier='1'>
             <div class="product-card__top">
               <div class="product-card__download">
-                <i class="fas fa-file-download"></i>
+                <i class="icon-download"></i>
               </div>
               <div class="product-card__event">
                 <span class="title">Акция</span>
@@ -933,7 +932,7 @@
           <div class="product-card hot" data-id="2" data-price='1' data-modifier='0'>
             <div class="product-card__top">
               <div class="product-card__download">
-                <i class="fas fa-file-download"></i>
+                <i class="icon-download"></i>
               </div>
               <div class="product-card__event">
                 <span class="title">Акция</span>
@@ -998,7 +997,7 @@
           <div class="product-card" data-id="3" data-price='0' data-modifier='0'>
             <div class="product-card__top">
               <div class="product-card__download">
-                <i class="fas fa-file-download"></i>
+                <i class="icon-download"></i>
               </div>
               <div class="product-card__event">
                 <span class="title">Акция</span>
@@ -1063,7 +1062,7 @@
           <div class="product-card hot" data-id="4" data-price='0' data-modifier='1'>
             <div class="product-card__top">
               <div class="product-card__download">
-                <i class="fas fa-file-download"></i>
+                <i class="icon-download"></i>
               </div>
               <div class="product-card__event">
                 <span class="title">Акция</span>
@@ -1141,7 +1140,7 @@
           <div class="product-card hot" data-id="1" data-price='1' data-modifier='1'>
             <div class="product-card__top">
               <div class="product-card__download">
-                <i class="fas fa-file-download"></i>
+                <i class="icon-download"></i>
               </div>
               <div class="product-card__event">
                 <span class="title">Акция</span>
@@ -1206,7 +1205,7 @@
           <div class="product-card hot" data-id="2" data-price='1' data-modifier='0'>
             <div class="product-card__top">
               <div class="product-card__download">
-                <i class="fas fa-file-download"></i>
+                <i class="icon-download"></i>
               </div>
               <div class="product-card__event">
                 <span class="title">Акция</span>
@@ -1271,7 +1270,7 @@
           <div class="product-card" data-id="3" data-price='0' data-modifier='0'>
             <div class="product-card__top">
               <div class="product-card__download">
-                <i class="fas fa-file-download"></i>
+                <i class="icon-download"></i>
               </div>
               <div class="product-card__event">
                 <span class="title">Акция</span>
@@ -1336,7 +1335,7 @@
           <div class="product-card hot" data-id="4" data-price='0' data-modifier='1'>
             <div class="product-card__top">
               <div class="product-card__download">
-                <i class="fas fa-file-download"></i>
+                <i class="icon-download"></i>
               </div>
               <div class="product-card__event">
                 <span class="title">Акция</span>
@@ -1401,7 +1400,7 @@
           <div class="product-card hot" data-id="1" data-price='1' data-modifier='1'>
             <div class="product-card__top">
               <div class="product-card__download">
-                <i class="fas fa-file-download"></i>
+                <i class="icon-download"></i>
               </div>
               <div class="product-card__event">
                 <span class="title">Акция</span>
@@ -1466,7 +1465,7 @@
           <div class="product-card hot" data-id="2" data-price='1' data-modifier='0'>
             <div class="product-card__top">
               <div class="product-card__download">
-                <i class="fas fa-file-download"></i>
+                <i class="icon-download"></i>
               </div>
               <div class="product-card__event">
                 <span class="title">Акция</span>
@@ -1531,7 +1530,7 @@
           <div class="product-card" data-id="3" data-price='0' data-modifier='0'>
             <div class="product-card__top">
               <div class="product-card__download">
-                <i class="fas fa-file-download"></i>
+                <i class="icon-download"></i>
               </div>
               <div class="product-card__event">
                 <span class="title">Акция</span>
@@ -1596,7 +1595,7 @@
           <div class="product-card hot" data-id="4" data-price='0' data-modifier='1'>
             <div class="product-card__top">
               <div class="product-card__download">
-                <i class="fas fa-file-download"></i>
+                <i class="icon-download"></i>
               </div>
               <div class="product-card__event">
                 <span class="title">Акция</span>
@@ -1670,19 +1669,19 @@
       <div class="footer-aligner">
         <p class="title">Контакты</p>
         <div class="footer-phone">
-          <a class="link" href="tel:+38 (044) 448-16-18"><i class="fas fa-phone"></i>+38 (044) 448-16-18</a>
-          <a class="link" href="tel:+38 (044) 555-55-55"><i class="fas fa-fax"></i>+38 (044) 555-55-55</a>
+          <a class="link" href="tel:+38 (044) 448-16-18"><i class="icon-phone"></i><span>+38 (044) 448-16-18</span></a>
+          <a class="link" href="tel:+38 (044) 555-55-55"><i class="icon-fax"></i><span>+38 (044) 555-55-55</span></a>
         </div>
         <div class="footer-social">
           <ul class="social-list">
             <li class="social-list__item">
-              <a href="#"><i class="fab fa-skype"></i></a>
+              <a href="#"><i class="icon-skype-brands"></i></a>
             </li>
             <li class="social-list__item">
-              <a href="#"><i class="fab fa-viber"></i></a>
+              <a href="#"><i class="icon-viber-brands"></i></a>
             </li>
             <li class="social-list__item">
-              <a href="#" class="link"><i class="fab fa-telegram-plane"></i></a>
+              <a href="#" class="link"><i class="icon-telegram-plane-brands"></i></a>
             </li>
           </ul>
           <div class="button"><span class="text">Подписаться на новости</span>
@@ -1725,24 +1724,24 @@
       <form action="" class="modal-form">
         <div class="modal-form__title">
           <span class="title">Задайте свой вопрос</span>
-          <span class="close"><i class="fas fa-times"></i></span>
+          <span class="close"><i class="icon-close"></i></span>
         </div>
         <div class="modal-form__content">
           <label for="modal-name" class="modal-form__label italic-input">
-            <i class="fas fa-user-alt"></i>
+            <i class="icon-account"></i>
             <input type="text" name="name" id="modal-name" placeholder="Ваше Имя">
           </label>
           <label for="modal-phone" class="modal-form__label italic-input">
-            <i class="fas fa-mobile-alt"></i>
+            <i class="icon-phone1"></i>
             <input type="text" id="modal-phone" name="phone" placeholder="Ваш телефон">
           </label>
           <label for="modal-email" class="modal-form__label italic-input error">
-            <i class="far fa-envelope"></i>
+            <i class="icon-email1"></i>
             <input type="email" name="email" id="modal-email" placeholder="Ваш email">
             <p class="error__text">поле заполнено неверно</p>
           </label>
           <label for="modal-text" class="modal-form__label italic-input">
-            <i class="far fa-comment-alt"></i>
+            <i class="icon-message"></i>
             <textarea name="text" id="modal-text" placeholder="Текст сообщения"></textarea>
           </label>
           <p class="warranty">Мы гарантируем конфиденциальность введенной вами информации</p>
@@ -1754,27 +1753,27 @@
       <form action="" class="modal-form">
         <div class="modal-form__title">
           <span class="title">Хотите узнать цену на товар?</span>
-          <span class="close"><i class="fas fa-times"></i></span>
+          <span class="close"><i class="icon-close"></i></span>
         </div>
         <div class="current-modification">
           <span class="current-modification__text">Коннектор ST/PC multimode 3,0 мм</span>
         </div>
         <div class="modal-form__content">
           <label for="modal-name-ask" class="modal-form__label italic-input">
-            <i class="fas fa-user-alt"></i>
+            <i class="icon-account"></i>
             <input type="text" name="name" id="modal-name-ask" placeholder="Ваше Имя">
           </label>
           <label for="modal-phone-ask" class="modal-form__label italic-input">
-            <i class="fas fa-mobile-alt"></i>
+            <i class="icon-phone1"></i>
             <input type="text" id="modal-phone-ask" name="phone" placeholder="Ваш телефон">
           </label>
           <label for="modal-email-ask" class="modal-form__label italic-input error">
-            <i class="far fa-envelope"></i>
+            <i class="icon-email1"></i>
             <input type="email" name="email" id="modal-email-ask" placeholder="Ваш email">
             <p class="error__text">поле заполнено неверно</p>
           </label>
           <label for="modal-text-ask" class="modal-form__label italic-input">
-            <i class="far fa-comment-alt"></i>
+            <i class="icon-message"></i>
             <textarea name="text" id="modal-text-ask" placeholder="Текст сообщения"></textarea>
           </label>
           <p class="warranty">Мы гарантируем конфиденциальность введенной вами информации</p>
@@ -1784,7 +1783,7 @@
     </div>
   </footer>
   <script src="../js/jquery-3.2.1.min.js"></script>
-  <script src="../js/slick.js"></script>
+  <script src="../js/slick.min.js"></script>
   <script src="../js/script.js"></script>
   <script src="../js/ie9-placeholder.js"></script>
 </body>
