--- a/documents/cart.html
+++ b/documents/cart.html
@@ -565,7 +565,7 @@
                   </div>
                 </div>
                 <div class="cart-card__price cart-scnd">
-                  <p class="price">52 300</p>
+                  <p class="cart-old__price">52 300</p>
                   <div class="cart-card__amount">
                     <div class="amount-block">
                       <span class="sale"><span class="text">-20%</span>
@@ -573,6 +573,7 @@
                       </span>
                     </div>
                   </div>
+                  <p class="price">52 300</p>
                 </div>
               </div>
             </div>
